--- a/README
+++ b/README
@@ -7,12 +7,10 @@ dependency using:
     git submodule update --init
 
 This project is organised like this:
-    doc/website/    - The nyah website
+    doc/website/    - The nyu website
     src/
         chilon/     - Library used by this project. git submodule
-        nyah/
-            grammar/  - Nyah grammars
-            std/      - Nyah standard library
-            mousedeer/        - Bootstrap nyah compiler.
-                cpp/          - mousedeer AST -> C++
-                grammar/          - mousedeer chilon::parser grammar
+        nyu/
+            grammar/  - Nyu grammars
+            cpp/          - nyu AST -> C++
+            grammar/      - nyu chilon::parser grammar
