--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Building:
+    cd src/nyu
+    ./configure
+    make
+    make install
+
 This project needs gcc 4.4 minimum to compile. It has been tested with
 gcc 4.4.2, 4.4.3 and gcc 4.5. Lately it compiles slowly with any
 version of gcc below 4.5
