--- a/TODO
+++ b/TODO
@@ -1,4 +1,1 @@
-0.1 - full parser
-0.8 - chilon::parser code generator
-0.9 - javascript code generator
-1.0 - java code generator
+Please see http://chilon.net/nyu/changelog.html
